Fixed search bar on iOS

--- a/sightzing/src/app/app.scss
+++ b/sightzing/src/app/app.scss
@@ -46,6 +46,10 @@ $color-gray: rgb(156, 156, 156);
     box-shadow: 0 7px 10px 0 rgba(0,0,0,.10), 0 1px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
 }
 
+.searchbar-ios.searchbar-left-aligned .searchbar-input {
+    background-color: rgb(243, 243, 243);
+}
+
 
 /*--------------------------------------*/
 /*TYPOGRAPHY */
