--- a/sightzing/src/theme/variables.scss
+++ b/sightzing/src/theme/variables.scss
@@ -118,7 +118,10 @@ $toolbar-md-button-color: black;
 
 // Search
 $searchbar-md-input-box-shadow: 0 7px 10px 0 rgba(0,0,0,.10), 0 1px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
-
+$searchbar-ios-input: 0 7px 10px 0 rgba(0,0,0,.10), 0 1px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+$searchbar-ios-background-color: white;
+$searchbar-ios-toolbar-input-background: rgb(243, 243, 243);
+$searchbar-ios-border-color: none;
 
 // Card-shadow
 $card-md-box-shadow: 0 7px 10px 0 rgba(0,0,0,.10), 0 1px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
